<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">QuizApp</string>
    <string name="welcome">Welcome</string>
    <string name="start">start</string>
    <string name="name">name</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="flag_image">flag_image</string>
    <string name="check">check</string>
</resources>